# Reflectly

./: .env.example  .gitignore  API_CONFIGURATION.md  API_ENV_SETUP.md  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/agents/: architect.md  debug.md
alembic/: env.py
alembic/versions/: 0cc9e1ff9c19_added_table_time_entries.py  501c8dac501d_added_new_columns_title_description.py  6f72cbe9d17b_test_migration.py  93d98c1ed3de_added_delete_flag.py  b7275ffb6e4c_create_users_table.py  e465ecbe595f_delete_unused_columns.py
deploy/: .gitignore  ARCHITECTURE.ru.md  CHECKLIST.ru.md  INDEX.md  QUICKSTART.ru.md  README.md  README.ru.md  TESTING.ru.md  deploy.sh
deploy/cloudflared/: b6527f78-2aa5-46fc-9e73-786f44810f2d.json  config.yml
deploy/nginx/conf.d/: reflectly.conf
docs/: API_ENDPOINTS.md  API_ROUTES.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/dashboard/: package-lock.json
frontend/dashboard/src/: main.js  style.css
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: DashboardEntries.vue  DashboardLayout.vue  DashboardSideMenu.vue  DashboardTimerSection.vue  DashboardUserGreeting.vue  EntryModal.vue  ExternalApi.vue  LandingPage.vue  LoginPage.vue  Notification.vue  SignupPage.vue  TimerSection.vue
frontend/src/config/: api.js
server/: main.py
server/core/: config.py  jwt_config.py  jwt_service.py  logging_config.py
server/db/: database.py  sessions.py
server/utils/: fastapi_utils.py
(+86 files in other folders)
