[project]
name = "reflectly"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "greenlet>=3.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pip>=25.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
]
